# homekube

./: .gitignore  Dockerfile  README.md  build_all.sh  weather_service.py
.agent/: vm.md
.claude/agent-memory/coder/: MEMORY.md
.forgejo/workflows/: e2e.yml  integration-tests.yml
.github/workflows/: e2e.yml  integration-tests.yml
Docker registry/: README.md  start_registry.sh
ci/: main.py
cloudflare-tunnel/: cloudflare-tunnel-token.yaml  cloudflare-tunnel.yaml
firecracker-vm/: README.md  agent_connect.py  agent_start.py  create_rootfs.sh  launch.sh
firecracker_vm/: README.md  agent_start.py  agent_sync.py  create_rootfs.sh  launch.sh  setup.sh
forgejo-runner/: .runner  register.sh
forgejo-runner/k8s/: configmap.yaml  debugpod.yaml  deployment.yaml  dind-config.yaml  pvc.yaml  service.yaml
forgejo-runner/on-host/: install-and-register.sh  install-values.md
homepage/: .dockerignore  Dockerfile  README.md  build.sh  cypress.config.ts  homepage-deployment.yaml  package-lock.json  package.json  server.js  vite.config.ts
homepage/cypress/e2e/: home.cy.ts
homepage/src/lib/: auth.mock.ts  auth.real.ts  auth.ts
homepage/src/lib/components/: AuthHeader.svelte
homepage/src/lib/mocks/: README.md  index.ts  keycloak.ts  websocket.ts
homepage/src/lib/mocks/data/: audio.ts  stt.ts  tts.ts
homepage/src/lib/server/: db.ts
homepage/src/routes/: +page.server.ts  +page.svelte  LiveTtsTab.svelte  SpeedtestTab.svelte  SttTab.svelte  TtsTab.svelte  WeatherTab.svelte
homepage/src/routes/api/auth/token/: +server.ts
homepage/src/routes/api/tts/generate/: +server.ts
homepage/src/routes/api/tts/jobs/: +server.ts
homepage/src/routes/api/tts/status/[id]/: +server.ts
integration-tests/: README.md  run.py  run.sh
keycloak/: SETUP.md
keycloak/k8s/: db.yaml  deployment.yaml  kustomization.yaml  secret.yaml  service.yaml
speech-to-text/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.vllm  Dockerfile.whisper  README.md  UPLOAD_MODEL.md  build.sh  params.json  whisper_server.py
speech-to-text/k8s/: deploy.yaml  pvc.yaml  service.yaml
speech-to-text/src/: auth.rs  main.rs  state.rs  transcribe.rs  vad.rs
speedtest/: .dockerignore  Cargo.toml  Dockerfile  build.sh  run_integration_test.sh  run_local.sh
speedtest/k8s/: deployment.yaml  postgres-cluster.yaml  service.yaml
speedtest/migrations/: V1__init.sql
speedtest/src/: api.rs  db.rs  entities.rs  main.rs  speedtest.rs
tansu/: deploy.py
tansu/k8s/: db.yaml  deployment.yaml  pvc.yaml  service.yaml
tansu/sql/: grant.sql
text-to-speech/: Cargo.toml  Dockerfile  README.md  build.sh  integration_tests.py  test_tts_2.txt  test_tts_3.txt  test_tts_input.txt
text-to-speech/k8s/: db.yaml  deploy.yaml  pvc.yaml  service.yaml
text-to-speech/migrations/: 20240101000000_init.sql  20240102000000_add_columns.sql
text-to-speech/src/: auth.rs  cleanup.rs  handlers.rs  inference.rs  main.rs  phonemizer.rs  state.rs  ws_handler.rs
text-to-speech/tests/: integration_test.rs
text-to-speech/tests/resources/: test_tts_input.txt
weather/: Dockerfile  build.sh  output.html  package-lock.json  package.json  weather-deployment.yaml
weather/src/: app.css  app.html
weather/src/routes/: +page.server.ts  +page.svelte
weatherhomepage/: Dockerfile  build.sh  weather-deployment.yaml  weather-service.yaml  weather_service.py
weatherhomepage/templates/: weather.html
