[package]
name = "speedtest"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.12"
refinery = { version = "0.8", features = ["tokio-postgres"] }
tokio-cron-scheduler = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
