[package]
name = "text-to-speech"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "macros"] }
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "time"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = "0.3"
