[package]
name = "text-to-speech"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "macros", "ws"] }
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "ndarray"] }
ndarray = "0.17"
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "time", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
scopeguard = "1.2"
